feat: document update and expire virtual accounts endpoints
